[gd_scene load_steps=13 format=3 uid="uid://d0cwafscnf063"]

[ext_resource type="PhysicsMaterial" uid="uid://cgwq52o87akpq" path="res://resources/materials/drop_physics_material.tres" id="1_puehy"]
[ext_resource type="Script" uid="uid://uaaigo4e0dhr" path="res://scenes/projectiles/acid_meteor_projectile.gd" id="2_k84s0"]
[ext_resource type="SphereMesh" uid="uid://bn06152qnqrjq" path="res://scenes/projectiles/acid_meteor_projectile_mesh.tres" id="3_sains"]
[ext_resource type="Texture2D" uid="uid://b443iq2l0etca" path="res://assets/textures/my/acid_9.png" id="4_7xmfc"]
[ext_resource type="Material" uid="uid://lv687amg27wl" path="res://particles/acid_meteor_projectile_particles.tres" id="4_ll78f"]
[ext_resource type="Material" uid="uid://dja4h5vnbcmef" path="res://particles/acid_meteor_projectile_colision_particles.tres" id="6_ny3q4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_x6vv3"]
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="SphereShape3D" id="SphereShape3D_4k6pj"]
resource_local_to_scene = true
radius = 0.17

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ll78f"]
shading_mode = 0
albedo_texture = ExtResource("4_7xmfc")
uv1_scale = Vector3(20, 20, 20)
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_arrt6"]
lightmap_size_hint = Vector2i(2, 2)
material = SubResource("StandardMaterial3D_ll78f")
size = Vector2(0.03, 0.03)
orientation = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sains"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.276)
albedo_texture = ExtResource("4_7xmfc")
uv1_scale = Vector3(3, 3, 3)
uv1_triplanar = true

[sub_resource type="SphereMesh" id="SphereMesh_7xmfc"]
material = SubResource("StandardMaterial3D_sains")
radial_segments = 8
rings = 6

[node name="AcidMeteorProjectile" type="RigidBody3D"]
collision_layer = 4
collision_mask = 5123
mass = 2.0
physics_material_override = ExtResource("1_puehy")
continuous_cd = true
script = ExtResource("2_k84s0")

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
light_color = Color(1, 1, 0.654902, 1)
omni_range = 1.0
omni_shadow_mode = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_x6vv3")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0, 0, 0)
shape = SubResource("BoxShape3D_x6vv3")

[node name="Meteor" type="MeshInstance3D" parent="."]
mesh = ExtResource("3_sains")

[node name="Area3D" type="Area3D" parent="Meteor"]
collision_layer = 4
collision_mask = 0
gravity_space_override = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="Meteor/Area3D"]
shape = SubResource("SphereShape3D_4k6pj")

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="ProjectileParticles" type="GPUParticles3D" parent="."]
cast_shadow = 0
emitting = false
amount = 10
one_shot = true
transform_align = 3
process_material = ExtResource("4_ll78f")
draw_pass_1 = SubResource("PlaneMesh_arrt6")

[node name="CollisionParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 30
lifetime = 0.5
speed_scale = 0.2
process_material = ExtResource("6_ny3q4")
draw_pass_1 = SubResource("SphereMesh_7xmfc")

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="VisualRadiusOfExsplosion" type="MeshInstance3D" parent="."]
visible = false
mesh = ExtResource("3_sains")

[connection signal="body_entered" from="Meteor/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Meteor/Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
